# JACFileBrowser

./: .gitignore  JACFileBrowserSolution.pro  README.md  TODOs.txt  install.py  release_build.py
.github/workflows/: jacfilebrowser-linux.yml  jacfilebrowser-windows.yml  jacfilebrowser.yml
JACFileBrowser/: .gitignore  CMakeLists.txt  ContentsPanel.qml  ExplorerTabView.qml  HighlightRectangle.qml  JACFileBrowser.pro  LeftPanel.qml  Main.qml  NiceLabel.qml  PreviewDialog.qml  PreviewPanel.qml  backend.cpp  backend.hpp  common.hpp  contentsmodel.cpp  contentsmodel.hpp  contentsviewmodel.cpp  contentsviewmodel.hpp  drivesmodel.cpp  drivesmodel.hpp  explorertabviewmodel.cpp  explorertabviewmodel.hpp  main.cpp  main.qml  mainviewmodel.cpp  mainviewmodel.hpp  pch.hpp  qml.qrc  qmliconpainter.cpp  qmliconpainter.hpp  qmlutils.hpp  sortmodel.cpp  sortmodel.hpp  tabsmodel.cpp  tabsmodel.hpp  testmodels.cpp  testmodels.hpp  utilities.cpp  utilities.hpp
JACFileBrowserQt6/: CMakeLists.txt  ContentsGridView.qml  ContentsTableView.qml  DrivesView.qml  contentsmodel.cpp  contentsmodel.hpp  drivesmodel.cpp  drivesmodel.hpp  listmodel.cpp  listmodel.hpp  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf  tablemodelproxy.cpp  tablemodelproxy.hpp  utils.cpp  utils.hpp
JACFileBrowserQt6/JACFileBrowserQt6/: CMakeLists.txt  Explorer.qml  ImageViewer.qml  contentmodel.cpp  contentmodel.hpp  main.cpp  main.qml  qml.qrc  qmlutils.hpp  qtquickcontrols2.conf  utils.cpp
JACFileBrowserQt6Old/JACFileBrowserQt6/: Explorer.qml  qmlutils.cpp
archive/JACFileBrowserQt5_old/: JACFileBrowser.pro  backend.cpp  backend.hpp  contentsmodel.cpp  contentsmodel.hpp  drivesmodel.cpp  drivesmodel.hpp  main.cpp  main.qml  qml.qrc  tabsmodel.cpp  tabsmodel.hpp
archive/JACFileBrowserQt6_old/JACFileBrowserQt6/: CMakeLists.txt  contentmodel.cpp  mainviewmodel.cpp  mainviewmodel.hpp
archive/JACFileBrowserQt6_old2/: ContentsGridView.qml  ContentsTableView.qml  DrivesView.qml  contentsmodel.hpp  drivesmodel.cpp  drivesmodel.hpp  main.cpp  qtquickcontrols2.conf  tablemodelproxy.cpp  tablemodelproxy.hpp
ui-test/JACFileBrowser/: .gitignore  CMakeLists.txt  Main.qml  main.cpp
